<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".IntroActivity">
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linear"
    android:layout_centerInParent="true"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#FF6D00"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:stateListAnimator="@animator/my_animator2"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:drawableEnd="@drawable/ic_person_black_24dp"
        android:background="@drawable/background"/>
    <EditText
        android:id="@+id/password"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:layout_height="wrap_content"
        android:hint="@string/create_password"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="15dp"
        android:password="true"
        android:stateListAnimator="@animator/my_animator2"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_phonelink_lock_black_24dp"
        android:background="@drawable/background"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="15dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:password="true"
        android:stateListAnimator="@animator/my_animator2"
        android:gravity="center"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_phonelink_lock_black_24dp"
        android:background="@drawable/background"/>

    <EditText
        android:id="@+id/security"
        android:stateListAnimator="@animator/my_animator2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/security_code_last_website_you_visit"
        android:fontFamily="sans-serif-condensed"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:password="true"
        android:ellipsize="end"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"
        android:drawableEnd="@drawable/ic_security_black_24dp"
        android:background="@drawable/background"/>
</LinearLayout>
 <Button
     android:id="@+id/normalButton"
     style="@style/Base.Widget.AppCompat.Button.Colored"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="15dp"
     android:layout_marginEnd="15dp"
     android:layout_below="@id/linear"
     android:layout_marginTop="30dp"
     android:layout_centerHorizontal="true"
     android:background="@drawable/background_button"
     android:stateListAnimator="@animator/my_animator"
     android:text="@string/show_notes"
     />
</RelativeLayout>
